--- a/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_travel_package_list_row.xml
+++ b/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_travel_package_list_row.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/travel_pkg_image"
-        android:layout_width="2560dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
         android:layout_gravity="center_vertical"
         android:scaleType="fitXY"
         android:src="@drawable/travel_package_default"
