--- a/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_package_detail.xml
+++ b/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_package_detail.xml
@@ -13,7 +13,8 @@
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/header_base_activity" >
+        android:layout_below="@id/header_base_activity"
+        android:scrollbars="none" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:gravity="center_vertical"
-                    android:singleLine="true"
+                    android:maxLines="2"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_13"
                     android:textStyle="bold" />
@@ -122,27 +123,29 @@
             <WebView
                 android:id="@+id/highlights_desc"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="239dp"
                 android:background="#ebebeb"
                 android:gravity="center_vertical"
                 android:padding="10dp"
+                android:scrollbars="none"
                 android:textColor="#808080"
                 android:visibility="gone" />
 
             <WebView
                 android:id="@+id/itinerary_desc"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="239dp"
                 android:background="#ebebeb"
                 android:gravity="center_vertical"
                 android:padding="10dp"
+                android:scrollbars="none"
                 android:textColor="#808080"
                 android:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/contacts_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="239dp"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:padding="10dp"
@@ -153,7 +156,7 @@
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="30dp"
                     android:background="@drawable/selector_package_detail_btn"
                     android:gravity="center"
                     android:text="@string/call_us_btn_lbl"
