--- a/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_package_detail.xml
+++ b/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_package_detail.xml
@@ -17,6 +17,7 @@
         android:scrollbars="none" >
 
         <LinearLayout
+            android:id="@+id/pkg_detail_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
