--- a/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_hall_list_row_layout.xml
+++ b/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_hall_list_row_layout.xml
@@ -17,12 +17,12 @@
         <ImageView
             android:id="@+id/home_icon_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="33dp"
             android:layout_gravity="center_vertical"
             android:layout_weight="21.5"
             android:contentDescription="@string/hall_img"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:src="@drawable/hall_loading" />
 
         <TextView
