--- a/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_booth_detail.xml
+++ b/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_booth_detail.xml
@@ -203,9 +203,11 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center_vertical"
                     android:layout_weight=".78"
+                    android:ellipsize="end"
                     android:paddingBottom="3dp"
                     android:paddingLeft="7dp"
                     android:paddingTop="7dp"
+                    android:singleLine="true"
                     android:textColor="@color/hyperlink_blue"
                     android:textSize="@dimen/sp_13" />
             </LinearLayout>
@@ -246,9 +248,11 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center_vertical"
                     android:layout_weight=".78"
+                    android:ellipsize="end"
                     android:paddingBottom="3dp"
                     android:paddingLeft="7dp"
                     android:paddingTop="7dp"
+                    android:singleLine="true"
                     android:textColor="@color/hyperlink_blue"
                     android:textSize="@dimen/sp_13" />
             </LinearLayout>
