--- a/branch/Branch_1.0.4/MaxisGetIt/res/layout/activity_company_detail.xml
+++ b/branch/Branch_1.0.4/MaxisGetIt/res/layout/activity_company_detail.xml
@@ -89,13 +89,13 @@
                     android:gravity="center_horizontal"
                     android:paddingBottom="3dp"
                     android:paddingTop="5dp"
-                    android:text="@string/sms" />
+                    android:text="@string/sms" />
                 -->
                 <!--
                       <TextView
                     android:layout_width="0dp"
                     android:layout_height="1dp"
-                    android:layout_weight=".04" />
+                    android:layout_weight=".04" />
                 -->
                 <!--
                      <TextView
@@ -110,8 +110,8 @@
                     android:gravity="center_horizontal"
                     android:paddingBottom="3dp"
                     android:paddingTop="5dp"
-                    android:text="@string/sms" /> 
-                 -->
+                    android:text="@string/sms" /> 
+                -->
             </LinearLayout>
 
             <!--
@@ -126,7 +126,7 @@
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
                 android:paddingTop="4dp"
-                android:src="@drawable/detail_cross" />
+                android:src="@drawable/detail_cross" />
             -->
 
             <android.support.v4.view.ViewPager
@@ -179,7 +179,7 @@
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
                     android:clickable="true"
-                    android:src="@drawable/add_contact" />
+                    android:src="@drawable/add_contact" />
                 -->
                 <!--
                      <ImageView
@@ -192,7 +192,7 @@
                     android:layout_marginRight="7dp"
                     android:layout_marginTop="3dp"
                     android:layout_toLeftOf="@+id/img_add_profile"
-                    android:background="@color/pink" />
+                    android:background="@color/pink" />
                 -->
 
                 <LinearLayout
@@ -569,7 +569,8 @@
                     android:textColor="@color/red" />
             </com.kelltontech.maxisgetit.ui.widgets.FlowLayout>
 
-            <TextView
+            <!--
+                 <TextView
                 android:id="@+id/cd_txt_tnc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -578,7 +579,54 @@
                 android:layout_marginRight="10dp"
                 android:text="@string/txt_tnc"
                 android:textColor="@color/hyperlink_blue"
-                android:visibility="visible" />
+                android:visibility="visible" />
+            -->
+
+            <LinearLayout
+                android:id="@+id/cd_layout_certified_comp_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/cd_txv_certified_comp_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:background="@drawable/shape_bg_green_grey_stroke"
+                        android:paddingBottom="5dp"
+                        android:paddingLeft="10dp"
+                        android:paddingTop="5dp"
+                        android:singleLine="true"
+                        android:text="@string/cd_certified_comp_title"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_12"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+
+                <com.kelltontech.maxisgetit.ui.widgets.ExpandableListView
+                    android:id="@+id/cd_certified_company_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:divider="@drawable/company_list_seprator"
+                    android:fadingEdge="none"
+                    android:gravity="center_vertical"
+                    android:numColumns="2"
+                    android:padding="0px"
+                    android:scrollbars="none" />
+
+                <!--
+                     <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/bar_light_grey" />
+                -->
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/are_lable_brief_des"
@@ -698,6 +746,24 @@
                     android:padding="0px"
                     android:scrollbars="none" />
 
+                <TextView
+                    android:id="@+id/cd_view_more_paid_company"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:background="@color/view_more_company_txv"
+                    android:clickable="true"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:paddingBottom="2dp"
+                    android:paddingTop="2dp"
+                    android:singleLine="true"
+                    android:text="@string/cd_view_more"
+                    android:textColor="@color/head_title_col"
+                    android:textSize="@dimen/sp_12"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -718,6 +784,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
                     android:paddingRight="5dp"
                     android:text="@string/refer_to_friends"
                     android:textColor="@color/title_dark_grey"
@@ -739,6 +806,23 @@
                     android:clickable="true"
                     android:paddingRight="5dp"
                     android:src="@drawable/selector_twitter_btn" />
+
+                <ImageView
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/bar_light_grey" />
+
+                <TextView
+                    android:id="@+id/cd_txt_tnc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/txt_tnc"
+                    android:textColor="@color/hyperlink_blue"
+                    android:textSize="@dimen/sp_13"
+                    android:visibility="visible" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
